[package]
name = "hook-listener"
version = "0.1.0"
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0"
env_logger = "0.6.1"
futures = "0.1.27"
failure = "0.1.5"
actix-rt = "0.2.2"
log = "0.4.6"
serde_json = "1.0.39"
structopt = "0.2.16"
actix-threadpool = "0.1.1"
pg-queue = { git = "https://github.com/cstorey/pg-queue.git" }
r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"
ring = "0.14.6"
hex = "0.3.2"
hex-slice = { git = "https://github.com/cstorey/hex-slice.git" }
git-build-version = { git = "https://github.com/cstorey/git-build-version.git" }

[profile.release]
debug = true
